...
<!-- The toolbar containing the URL bar, back button, and NTP button.
-->

<org.chromium.chrome.browser.toolbar.top.ToolbarPhone
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/toolbar"
    android:layout_width="match_parent"
    android:layout_height="@dimen/toolbar_height_no_shadow" >

    <org.chromium.chrome.browser.toolbar.HomeButton
        android:id="@+id/home_button"
        style="@style/ToolbarButton"
...
            android:layout="@layout/experimental_toolbar_button"
            style="@style/ToolbarButton"
            android:paddingStart="12dp"
            android:visibility="gone" />

        <org.chromium.chrome.browser.toolbar.top.ToggleTabStackButton
            android:id="@+id/tab_switcher_button"
            style="@style/ToolbarButton"
            android:paddingStart="8dp"
            android:layout_gravity="top"
            android:contentDescription="@string/accessibility_toolbar_btn_tabswitcher_toggle_default"
            app:menuMaxWidth="@dimen/tab_switcher_menu_width"
            app:menuVerticalOverlapAnchor="false" />
...
